--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="primary_color">#5884fc</color>
-    <color name="button_clicked_color">#1565C0</color>
+    <color name="button_clicked_color">#354f97</color>
 
     <color name="gray_background_color">#ECECEC</color>
     <color name="white">#FFFFFFFF</color>
