--- a/app/src/main/res/layout/fragment_group.xml
+++ b/app/src/main/res/layout/fragment_group.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:background="@color/white"
     android:layout_height="match_parent"
-
+    xmlns:tools="http://schemas.android.com/tools"
+    android:background="@drawable/background_gradient_blue"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -75,6 +75,7 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_node_list"
             android:layout_width="match_parent"
+            tools:listitem="@layout/item_node"
             android:layout_height="match_parent"/>
 
         <LinearLayout
@@ -87,18 +88,17 @@
             android:orientation="vertical">
 
             <ImageView
-                android:layout_width="180dp"
-                android:layout_height="180dp"
-                android:src="@drawable/img_empty" />
+                android:layout_width="160dp"
+                android:layout_height="160dp"
+                android:src="@drawable/ic_empty" />
 
             <TextView
-                android:textColor="@color/black"
+                android:textColor="#61688b"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
                 android:gravity="center"
                 android:text="@string/fragment_group_list_no_node_message"
-                android:textSize="20sp" />
+                android:textSize="18sp" />
         </LinearLayout>
 
     </RelativeLayout>
