--- a/app/src/main/res/layout/fragment_node_info.xml
+++ b/app/src/main/res/layout/fragment_node_info.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/background_gradient_blue"
     android:padding="10dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
@@ -59,8 +60,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="3dp"
+
                     android:text="Unknown Device"
-                    android:textColor="@color/black"
+                    android:textColor="#61688b"
                     android:textSize="14sp" />
             </LinearLayout>
         </LinearLayout>
@@ -112,7 +114,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="3dp"
                     android:text="0002"
-                    android:textColor="@color/black"
+                    android:textColor="#61688b"
                     android:textSize="14sp" />
             </LinearLayout>
         </LinearLayout>
@@ -164,7 +166,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="3dp"
                     android:text="11"
-                    android:textColor="@color/black"
+                    android:textColor="#61688b"
                     android:textSize="14sp" />
             </LinearLayout>
         </LinearLayout>
@@ -215,7 +217,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="3dp"
                     android:text="Demo network"
-                    android:textColor="@color/black"
+                    android:textColor="#61688b"
                     android:textSize="14sp" />
             </LinearLayout>
         </LinearLayout>
@@ -266,7 +268,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="3dp"
                     android:text="0"
-                    android:textColor="@color/black"
+                    android:textColor="#61688b"
                     android:textSize="14sp" />
             </LinearLayout>
         </LinearLayout>
@@ -317,7 +319,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="3dp"
                     android:text="0"
-                    android:textColor="@color/black"
+                    android:textColor="#61688b"
                     android:textSize="14sp" />
             </LinearLayout>
         </LinearLayout>
@@ -367,7 +369,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="3dp"
                     android:text="0"
-                    android:textColor="@color/black"
+                    android:textColor="#61688b"
                     android:textSize="14sp" />
             </LinearLayout>
         </LinearLayout>
