--- a/app/src/main/res/layout/fragment_node_list.xml
+++ b/app/src/main/res/layout/fragment_node_list.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="@drawable/background_gradient_blue"
     android:layout_height="match_parent">
 
 
@@ -23,16 +24,15 @@
         <ImageView
             android:layout_width="180dp"
             android:layout_height="180dp"
-            android:src="@drawable/img_empty" />
+            android:src="@drawable/ic_empty" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
+            android:textColor="#61688b"
             android:gravity="center"
             android:text="@string/fragment_node_list_no_node_message"
-            android:textColor="@color/black"
-            android:textSize="20sp" />
+            android:textSize="18sp" />
     </LinearLayout>
 
 </RelativeLayout>
