--- a/app/src/main/res/layout/fragment_ota_list.xml
+++ b/app/src/main/res/layout/fragment_ota_list.xml
@@ -1,17 +1,18 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
+    android:background="@drawable/background_gradient_blue"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools">
 
     <androidx.recyclerview.widget.RecyclerView
+        android:background="@drawable/background_gradient_blue"
         android:id="@+id/rv_ota_list"
         android:layout_width="match_parent"
         tools:itemCount="3"
         tools:listitem="@layout/item_ota"
         android:layout_height="match_parent"
-        android:layout_above="@id/scanning_gradient_container"
-        android:background="@color/white" />
+        android:layout_above="@id/scanning_gradient_container" />
 
     <com.skyfishjy.library.RippleBackground
         android:id="@+id/bg_ripple"
