--- a/app/src/main/res/layout/fragment_subnet.xml
+++ b/app/src/main/res/layout/fragment_subnet.xml
@@ -33,6 +33,7 @@
             android:layout_height="wrap_content"
             android:text="Connected"
             android:textSize="16sp"
+            android:textColor="#61688b"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tv_count" />
 
