--- a/app/src/main/res/layout/item_functionality.xml
+++ b/app/src/main/res/layout/item_functionality.xml
@@ -2,35 +2,35 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    android:paddingTop="10dp"
+    android:layout_marginVertical="10dp"
     android:foreground="@drawable/item_ripple_effect"
-    android:paddingHorizontal="10dp">
+    android:orientation="horizontal"
+    android:paddingHorizontal="15dp">
 
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-            <TextView
-                android:layout_centerVertical="true"
-                android:gravity="center_vertical"
-                android:id="@+id/tv_functionality_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Functionality Name"
-                android:textColor="@color/primary_color"
-                android:textSize="14sp" />
+        <TextView
+            android:id="@+id/tv_functionality_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:gravity="center_vertical"
+            android:text="Functionality Name"
+            android:textColor="@color/primary_color"
+            android:textSize="16sp" />
 
-            <TextView
-                android:id="@+id/tv_functionality_binded"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Bind"
-                android:textColor="@color/primary_color"
-                android:layout_alignParentEnd="true"
-                android:textSize="14sp"/>
-        </RelativeLayout>
+        <TextView
+            android:id="@+id/tv_functionality_binded"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:text="Bind"
+            android:textColor="@color/primary_color"
+            android:textSize="16sp" />
+    </RelativeLayout>
 
 
 </LinearLayout>
