--- a/app/src/main/res/layout/fragment_subnet_list.xml
+++ b/app/src/main/res/layout/fragment_subnet_list.xml
@@ -147,6 +147,7 @@
         android:id="@+id/rv_subnet_list"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:layout_marginTop="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_my_subnet"
         tools:itemCount="3"
@@ -160,12 +161,12 @@
         android:layout_marginHorizontal="10dp"
         android:background="@color/white"
         android:gravity="center"
-        android:orientation="vertical"
         android:visibility="gone"
+        android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toBottomOf="@id/tv_my_subnet"
+        app:layout_constraintStart_toStartOf="parent">
 
         <ImageView
             android:layout_width="180dp"
