--- a/app/src/main/res/layout/fragment_ota_config.xml
+++ b/app/src/main/res/layout/fragment_ota_config.xml
@@ -24,7 +24,7 @@
                 android:paddingTop="20dp"
                 android:paddingEnd="0dp"
                 android:text="@string/dialog_ota_config_header"
-                android:textColor="#3D3F4F"
+                android:textColor="@color/primary_color"
                 android:textSize="20sp"
                 android:textStyle="bold" />
 
@@ -323,7 +323,7 @@
                         android:layout_marginStart="10dp"
                         android:layout_marginTop="5dp"
                         android:text="OTA Progress"
-                        android:textColor="#3D3F4F"
+                        android:textColor="@color/primary_color"
                         android:textSize="18sp"
                         android:textStyle="bold" />
 
